# cancer-prediction-rt582

./: .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: build-and-publish.yml
cancer_prediction/: cancer_model.py  streamlit_app.py
cancer_prediction/cli/: app.py
docs/: index.md
tests/: test_CancerModel.py
