[tool.poetry]
name = "cancer-prediction-rt582"
version = "0.1.0"
description = "A package to detect cancer from various features. Used to practise publishing packages."
authors = ["Orlando <60468146+orlando-code@users.noreply.github.com>"]
license = "GPL-3.0-or-later\u001b[D"
readme = "README.md"
packages = [{include = "cancer_prediction"}]

[tool.poetry.scripts]
cancer-prediction = "cancer_prediction.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
streamlit = "^1.40.1"
typer = "^0.13.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
pre-commit = "^4.0.1"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"

[tool.black]
line-length = 80
exclude = '''
/(
      .eggs         
    | .git          
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
